<resources>
    <string name="app_name">CameraBooking</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This ID  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_shooping_cart">My Cart</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_product"> </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_cek_acitvity">CekAcitvity</string>
    <string name="title_activity_cek_acivity">Cek</string>

    <string-array name="services">
        <item>- Pilih Pelayanan -</item>
        <item>Diantar</item>
        <item>Datang Sendiri</item>
    </string-array>


    <string name="spin_gender"> Choose Gender</string>
    <string-array name="array_gender">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string name="developer">Developer</string>
    <string name="harloom">Harloom (FullStack Developer)</string>


</resources>
