<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!--<item-->
        <!--android:id="@+id/navigation_dashboard"-->
        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
        <!--android:title="@string/title_dashboard" />-->
    <!--<item-->
        <!--android:id="@+id/navigation_cart"-->
        <!--android:icon="@drawable/ic_shopping_cart_"-->
        <!--android:title="@string/title_shooping_cart" />-->
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

</menu>
