<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        android:elevation="10dp">
        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/title_home"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FFFF"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Harloom"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#ffff"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="1dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingTop="10dp"
                android:background="@drawable/bg_card"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">
                    <ImageView
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Cetak"

                        android:textColor="#ffff"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:orientation="vertical">
                    <ImageView
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:layout_width="60dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Settings"
                        android:textColor="#ffff"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">
                    <ImageView
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="LogOut"
                        android:textColor="#ffff"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="3dp"
        app:cardCornerRadius="5dp"
        android:elevation="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/developer"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/harloom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="M Aziz ( System Analisys )"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="Agung Prayuda ( System Analisys Businises)"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="Fery Fernando ( UI/UX Designer)"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="Ridwan Janata (System USE CASE Designer)"/>
        </LinearLayout>


</androidx.cardview.widget.CardView>




</LinearLayout>